Fixed code not available in Java 11